# echos

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt
.github/workflows/: bulld.yml  format.yml
include/core/: game.h  player_system.h  window.h
include/core/resource/: cache.h  cache_manager.h
include/ecs/: system.h
include/ecs/components/: sprite.h  transform.h
include/graphics/: error.h  image.h  shader.h  shader_error.h  shader_exception.h  shader_program.h  texture.h  vertex_array.h  vertex_buffer.h
include/input/: action.h
include/physics/components/: transform.h
include/render/: render_system.h  texture.h
include/render/components/: sprite.h
src/: CMakeLists.txt  main.cpp
src/core/: game.cpp  player_system.cpp  window.cpp
src/echos/: CMakeLists.txt
src/echos/include/core/components/: player_controller.h
src/echos/include/core/resource/: loader.h
src/echos/include/ecs/: system.h
src/echos/include/graphics/: vertex_buffer.h
src/echos/src/: main.cpp
src/echos/src/core/: game.cpp  window.cpp
src/echos/src/graphics/: shader_program.cpp  texture.cpp
src/echos/src/render/: render_system.cpp
src/graphics/: image.cpp  shader.cpp  shader_program.cpp  vertex_array.cpp  vertex_buffer.cpp
src/render/: render_system.cpp  shaders.h  texture.cpp
